--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
          document.querySelector('#longTaskRunner').addEventListener('click', runLongTask);
         </script>
+        <div style="position:absolute;bottom:20px">Code: <a href="https://github.com/deepanjanroy/long-tasks-single-process">https://github.com/deepanjanroy/long-tasks-single-process</a></div>
 
     </body>
 </html>
